--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "def euclidean_distance(p1, p2):\n",
-    "    np.sqrt()"
+    "    np.sqrt((p))"
    ]
   },
   {
