Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,6 +54,7 @@
    "outputs": [],
    "source": [
     "def euclidean_distance(p1, p2):\n",
+    "    [p for p]\n",
     "    np.sqrt((p1-p2))"
    ]
   },
