Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,8 @@
    "outputs": [],
    "source": [
     "def euclidean_distance(p1, p2):\n",
-    "    [p for p]\n",
+    "    \n",
+    "    [p for p in p1]\n",
     "    np.sqrt((p1-p2))"
    ]
   },
