--- a/index.ipynb
+++ b/index.ipynb
@@ -54,8 +54,9 @@
    "outputs": [],
    "source": [
     "def euclidean_distance(p1, p2):\n",
+    "    p1p = [p for p in p1]\n",
+    "    p\n",
     "    \n",
-    "    [p for p in p1]\n",
     "    np.sqrt((p1-p2))"
    ]
   },
