Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "def euclidean_distance(p1, p2):\n",
     "    p1p = [p for p in p1]\n",
-    "    p\n",
+    "    p2p = [p for p in p2]\n",
     "    \n",
     "    np.sqrt((p1-p2))"
    ]
