Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
     "def euclidean_distance(p1, p2):\n",
     "    p1p = [p for p in p1]\n",
     "    p2p = [p for p in p2]\n",
-    "    [p[i]]\n",
+    "    [p[i]-p2[i] for ]\n",
     "    np.sqrt((p1-p2))"
    ]
   },
