--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
     "def euclidean_distance(p1, p2):\n",
     "    p1p = [p for p in p1]\n",
     "    p2p = [p for p in p2]\n",
-    "    [(p1p[i]-p2p[i])**2 for i in range(len(p1))]\n",
+    "    unit = [(p1p[i]-p2p[i])**2 for i in range(len(p1))]\n",
     "    np.sqrt((p1-p2))"
    ]
   },
