Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
     "    p1p = [p for p in p1]\n",
     "    p2p = [p for p in p2]\n",
     "    unit = [(p1p[i]-p2p[i])**2 for i in range(len(p1))]\n",
-    "    np.sqrt((p1-p2))"
+    "    np.sqrt(sum(unit))"
    ]
   },
   {
