Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "    p1p = [p for p in p1]\n",
     "    p2p = [p for p in p2]\n",
     "    unit = [(p1p[i]-p2p[i])**2 for i in range(len(p1))]\n",
-    "    np.sqrt(sum(unit))"
+    "    return np.sqrt(sum(unit))"
    ]
   },
   {
