Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,10 +54,8 @@
    "outputs": [],
    "source": [
     "def euclidean_distance(p1, p2):\n",
-    "    p1p = [p for p in p1]\n",
-    "    p2p = [p for p in p2]\n",
-    "    unit = [(p1p[i]-p2p[i])**2 for i in range(len(p1))]\n",
-    "    return np.sqrt(sum(unit))"
+    "    p1, p2 = np.array(p1), np.array(p2) # Ensure p1 and p2 are NumPy arrays\n",
+    "    return np.sqrt(np.sum(np.square(p2 - p1)))"
    ]
   },
   {
